2197 Reorganize, SF